<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LingoLeap</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="deck_name_placeholder">Deck name</string>
    <string name="card_number_placeholder">0 cards</string>
    <string name="deck_list_title">Deck list</string>
    <string name="card_question_placeholder">Question</string>
    <string name="card_delete_description">Delete card</string>
    <string name="card_answer_placeholder">Answer</string>
    <string name="button_create">Create</string>
    <string name="action_create_flashcard">Create flashcard</string>
    <string name="start_learning">Start learning</string>
    <string name="action_delete_deck">Delete deck</string>
    <string name="action_settings">Settings</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="card_index_placeholder">0/0</string>
    <string name="card_hidden_answer">Tap to see</string>
    <string name="deck_new_title">New deck</string>
    <string name="deck_new_name_hint">Name</string>
    <string name="button_cancel">Cancel</string>
    <string name="card_number_singular" tools:ignore="PluralsCandidate">%1$d card</string>
    <string name="card_number_plural" tools:ignore="PluralsCandidate">%1$d cards</string>
    <string name="deck_already_exists">This deck already exists</string>
    <string name="card_index">%1$d/%2$d</string>
    <string name="difficulty">Difficulty</string>
    <string name="card_new_title">New card</string>
    <string name="card_edit_title">Edit card</string>
    <string name="card_not_found">Couldn\'t load card data</string>
    <string name="card_difficulty_placeholder">Difficulty</string>
    <string name="card_difficulty_easy">Easy</string>
    <string name="card_difficulty_very_easy">Very easy</string>
    <string name="card_difficulty_medium">Medium</string>
    <string name="card_difficulty_hard">Hard</string>
    <string name="card_difficulty_very_hard">Very hard</string>
    <string name="main_daily_training">Coming soon!\nYour daily training is ready</string>
    <string name="main_daily_training_subtitle">Continue your 5-day streak</string>
    <string name="main_hi_player">Welcome back, John</string>
    <string name="main_hi_player_subtitle">It\'s time to improve your skills</string>
    <string name="main_play_games">Browse our full catalog of games</string>
    <string name="main_flashcards">Learn with flashcards</string>
    <string name="main_flashcards_subtitle">Keep your knowledge for longer</string>
    <string name="grammar">more soon</string>
    <string name="reading">Reading</string>
    <string name="listening">Listening</string>
    <string name="speaking">more soon</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="writing">more soon</string>
    <string name="audios_list">Audios list</string>
    <string name="audio_name_placeholder">Audio name</string>
    <string name="vocab_topic_placeholder">Vocab topic</string>
    <string name="title_activity_listening">ListeningActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="vocabulary_topics">Vocabulary topics</string>
    <string name="stories">Stories</string>
</resources>