<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/app_toolbar_gradient"
        android:minHeight="?attr/actionBarSize"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appTitle"
            style="@style/Headline1TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/app_name"
            android:textColor="@color/secondaryTextColor" />

        <ImageView
            android:id="@+id/iconAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="24dp"
            app:srcCompat="@drawable/outline_account_circle_30" />

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleHiPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                android:text="@string/main_hi_player"
                android:textAppearance="@style/Headline2TextTheme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subtitleHiPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/plus_jakarta_sans"
                android:text="@string/main_hi_player_subtitle"
                android:textAppearance="@style/BodyTextTheme"
                app:layout_constraintStart_toStartOf="@+id/titleHiPlayer"
                app:layout_constraintTop_toBottomOf="@+id/titleHiPlayer" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttonLayoutDailyTraining"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/daily_training_gradient"
                android:clickable="true"
                android:fadingEdge="none"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:paddingTop="48dp"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subtitleHiPlayer">

                <TextView
                    android:id="@+id/titleDailyTraining"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/plus_jakarta_sans_bold"
                    android:text="@string/main_daily_training"
                    android:textAppearance="@style/TitleTextTheme"
                    android:textColor="@color/secondaryTextColor"
                    app:layout_constraintBottom_toTopOf="@+id/subtitleDailyTraining"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/subtitleDailyTraining"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/plus_jakarta_sans"
                    android:text="@string/main_daily_training_subtitle"
                    android:textAppearance="@style/SubtitleTextTheme"
                    android:textColor="@color/secondaryTextColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/iconStreak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    app:layout_constraintBottom_toBottomOf="@+id/subtitleDailyTraining"
                    app:layout_constraintStart_toEndOf="@+id/subtitleDailyTraining"
                    app:layout_constraintTop_toTopOf="@+id/subtitleDailyTraining"
                    app:srcCompat="@drawable/outline_fire_20" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttonLayoutFlashcards"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/flashcards_gradient"
                android:clickable="true"
                android:fadingEdge="none"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonLayoutDailyTraining">

                <TextView
                    android:id="@+id/titleFlashcards"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/plus_jakarta_sans_bold"
                    android:text="@string/main_flashcards"
                    android:textAppearance="@style/TitleTextTheme"
                    android:textColor="@color/secondaryTextColor"
                    app:layout_constraintBottom_toTopOf="@+id/subtitleFlashcards"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/subtitleFlashcards"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/plus_jakarta_sans"
                    android:text="@string/main_flashcards_subtitle"
                    android:textAppearance="@style/SubtitleTextTheme"
                    android:textColor="@color/secondaryTextColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:alpha="0.6"
                    android:scaleX="1.25"
                    android:scaleY="1.25"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/outline_deck_64" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/titlePlayGames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/plus_jakarta_sans"
                android:text="@string/main_play_games"
                android:textAppearance="@style/SubtitleTextTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonLayoutFlashcards" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttonLayoutGrammar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/grammar_gradient"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:paddingTop="24dp"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toStartOf="@+id/buttonLayoutVocabulary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titlePlayGames">

                <TextView
                    android:id="@+id/buttonTitleGrammar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/plus_jakarta_sans_bold"
                    android:text="@string/grammar"
                    android:textAppearance="@style/TitleTextTheme"
                    android:textColor="@color/secondaryColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttonLayoutVocabulary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/vocabulary_gradient"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:paddingTop="24dp"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonLayoutGrammar"
                app:layout_constraintTop_toBottomOf="@+id/titlePlayGames">

                <TextView
                    android:id="@+id/buttonTitleVocabulary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/plus_jakarta_sans_bold"
                    android:text="@string/vocabulary"
                    android:textAppearance="@style/TitleTextTheme"
                    android:textColor="@color/primaryColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttonLayoutListening"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/listening_gradient"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:paddingTop="24dp"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toStartOf="@+id/buttonLayoutSpeaking"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonLayoutGrammar">

                <TextView
                    android:id="@+id/buttonTitleListening"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/plus_jakarta_sans_bold"
                    android:text="@string/listening"
                    android:textAppearance="@style/TitleTextTheme"
                    android:textColor="@color/quaternaryColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttonLayoutSpeaking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/speaking_gradient"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:paddingTop="24dp"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonLayoutListening"
                app:layout_constraintTop_toBottomOf="@+id/buttonLayoutVocabulary">

                <TextView
                    android:id="@+id/buttonTitleSpeaking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/plus_jakarta_sans_bold"
                    android:text="@string/speaking"
                    android:textAppearance="@style/TitleTextTheme"
                    android:textColor="@color/quinaryColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttonLayoutReading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/reading_gradient"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:paddingTop="24dp"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toStartOf="@+id/buttonLayoutWriting"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonLayoutListening">

                <TextView
                    android:id="@+id/buttonTitleReading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/plus_jakarta_sans_bold"
                    android:text="@string/reading"
                    android:textAppearance="@style/TitleTextTheme"
                    android:textColor="@color/tertiaryColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttonLayoutWriting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/writing_gradient"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:paddingTop="24dp"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonLayoutReading"
                app:layout_constraintTop_toBottomOf="@+id/buttonLayoutSpeaking">

                <TextView
                    android:id="@+id/buttonTitleWriting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/plus_jakarta_sans_bold"
                    android:text="@string/writing"
                    android:textAppearance="@style/TitleTextTheme"
                    android:textColor="@color/senaryColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>